true up to catalog

--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@ master-slider: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/new-european-team-members">StoneAge Welcomes New European Team Members</a></h4>
+        <p>StoneAge is pleased to welcome a new Sales Manager and Technical Product Expert to our European team.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, April 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/lightweight-striker-available">Announcing Lightweight Striker</a></h4>
         <p>StoneAge is pleased to announce the Lightweight Striker SKRL-100 automated remote shotgun cleaning system.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2017</small></p>
