--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -62,11 +62,11 @@ master-slider: yes
       <h2>Features</h2>
       <ul class="feature-list">
         <li>Different jetting configurations allow for more or less pull and forward hitting power</li>
-        <li>Designed to easily pair with the AutoBox ABX-500 hose handling system for hands-free pipe cleaning</li>
         <li>Navigates elbows as small as 4 in. (102 mm) at up to 43.5k psi (3000 bar)</li>
         <li>Self-rotary, speed controlled head provides complete internal coverage with optimum jet delivery</li>
         <li>Two speeds to choose from to maximize cleaning by choosing slower speeds for hard to clean or plugged pipes, and faster speeds for polishing easy to clean pipes with a single tool</li>
         <li>Multiple jetting options optimize the tool for a variety of pumps pressures and flows - unplug, polish, or run longer lines based on jetting</li>
+        <li>Designed to easily pair with the <a href="/abx-500">AutoBox ABX-500</a> hose tractor for hands-free pipe cleaning</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
