--- a/rotary-waterblast-tools/sl-swivel.html
+++ b/rotary-waterblast-tools/sl-swivel.html
@@ -58,12 +58,6 @@ master-slider: yes
         <li>External grease fittings for easy maintenance</li>
         <li>0° or 90° inlet connection simplifies hose routing</li>
       </ul>
-      <h2>Applications</h2>
-      <ul class="feature-list">
-        <li>Preventing hose kink</li>
-        <li>Conveying high pressure water from a stationary line to a powered rotating or twisting assembly</li>
-        <li>Standard equipment on <a href="/rigid-lance-machine">Rigid Lance Machines</a></li>
-      </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
@@ -79,9 +73,10 @@ master-slider: yes
         <nav>
             <ul>
               <li><a href="#section-bar-1"><span>Specifications</span></a></li>
-              <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-              <li><a href="#section-bar-3"><span>Videos</span></a></li>
-              <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
+              <li><a href="#section-bar-2"><span>Applications</span></a></li>
+              <li><a href="#section-bar-3"><span>Manuals/Docs</span></a></li>
+              <li><a href="#section-bar-4"><span>Videos</span></a></li>
+              <li><a href="#section-bar-5"><span>Service Kits</span></a></li>
             </ul>
         </nav>
         <div class="content-wrap">
@@ -208,9 +203,26 @@ master-slider: yes
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
           </section>
+      
+          <!-- Applications -->
+          <section id="section-bar-2">
+            <div class="col-sm-8">
+              <ul class="list-unstyled basic">
+              <h3>Applications</h3>
+                <li>Preventing hose kink</li>
+                <li>Conveying high pressure water from a stationary line to a powered rotating or twisting assembly</li>
+                <li>Standard equipment on <a href="/rigid-lance-machine">Rigid Lance Machines</a></li>
+              </ul>
+            </div>
+            <aside class="col-sm-3 col-sm-offset-1 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
+          </section>
 
           <!-- Manuals/Docs -->
-          <section id="section-bar-2">
+          <section id="section-bar-3">
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
@@ -231,7 +243,7 @@ master-slider: yes
           </section>
 
           <!-- Videos -->
-          <section id="section-bar-3">
+          <section id="section-bar-4">
             <div class="row row-centered">
               <div class="col-sm-4 col-centered">
                 <!-- Lightbox call -->
@@ -247,7 +259,7 @@ master-slider: yes
           </section>
           
           <!-- Kits -->
-          <section id="section-bar-4">
+          <section id="section-bar-5">
             <div class="col-sm-8">
               <h3>The following kits are available:</h3>
               <p><em class="grey">Click to view kit contents</em></p>
