--- a/rotary-waterblast-tools/uh-swivel.html
+++ b/rotary-waterblast-tools/uh-swivel.html
@@ -57,12 +57,6 @@ master-slider: yes
         <li>External grease fittings for easy maintenance</li>
         <li>0° or 90° inlet connection simplifies hose routing</li>
       </ul>
-      <h2>Applications</h2>
-      <ul class="feature-list">
-        <li>Lancing machines, surface cleaning machines, hose reels</li>
-        <li>Preventing hose kink</li>
-        <li>Conveying high pressure water from a stationary line to a powered rotating or twisting assembly</li>
-      </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
@@ -78,9 +72,10 @@ master-slider: yes
         <nav>
             <ul>
               <li><a href="#section-bar-1"><span>Specifications</span></a></li>
-              <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-              <li><a href="#section-bar-3"><span>Videos</span></a></li>
-              <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
+              <li><a href="#section-bar-2"><span>Applications</span></a></li>
+              <li><a href="#section-bar-3"><span>Manuals/Docs</span></a></li>
+              <li><a href="#section-bar-4"><span>Videos</span></a></li>
+              <li><a href="#section-bar-5"><span>Service Kits</span></a></li>
             </ul>
         </nav>
         <div class="content-wrap">
@@ -258,6 +253,23 @@ master-slider: yes
               </div>
             </div>
             <aside class="col-sm-3 col-sm-offset-4 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
+          </section>
+      
+          <!-- Applications -->
+          <section id="section-bar-2">
+            <div class="col-sm-8">
+              <ul class="list-unstyled basic">
+              <h3>Applications</h3>
+                <li>Lancing machines, surface cleaning machines, hose reels</li>
+                <li>Preventing hose kink</li>
+                <li>Conveying high pressure water from a stationary line to a powered rotating or twisting assembly</li>
+              </ul>
+            </div>
+            <aside class="col-sm-3 col-sm-offset-1 aside-box">
               <h3>Need Support?</h3>
               <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
