--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -64,16 +64,22 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
+<!--      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="http://www.stoneagetools.com/autopack-pro" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>-->
 
-      <p class="product-description">The StoneAge AutoBox ABX-2L is an automated system for “hands-free” heat exchanger tube cleaning applications. It is designed with an emphasis on safety, ease of setup, portability and reliability. When paired with StoneAge Banshee rotary tube cleaning nozzles and lightweight positioner, the AutoBox ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
+      <p class="product-description">The StoneAge AutoBox ABX-2L is an automated two lance system for hands-free heat exchanger tube cleaning applications. It was designed to reliably control one or two flex lances with an emphasis on portability, ease of setup, and safety.</p>
+      <p>The ABX-2L can be used with any pressure rated hose ranging in size from 3/2 to 8/4. Paired with StoneAge Banshee rotary tube cleaning nozzles and Lightweight Positioner, the ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Dual or single lance operation</li>
-        <li>Quick setup — intuitive features like quick-release pins and plug-and-play assembly minimize downtime</li>
-        <li>Hose clamp pressure and feed rates can be quickly adjusted for repeatable, consistent cleaning</li>
-        <li>Operates reliably in highly corrosive environments</li>
-        <li>Full line of accessories available</li>
+        <li>Lightweight, modular design allows a single operator to move, set up and run</li>
+        <li>Quick-swap rollers can be changed without tools to accommodate different hose sizes</li>
+        <li>Hose clamp pressure and feed rates can be romotely adjusted on the fly for repeatable, consistent cleaning</li>
+        <li>Proven reliability on the toughest jobs and most corrosive environments</li>
+        <li>Low cost of ownership – low cost components, quick and easy maintenance</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="Hose Containment System">HCS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/autostroke" data-toggle="tooltip" title="AutoStroke">AST</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
@@ -147,15 +153,18 @@ master-slider: yes
               </tbody>
               </table>
             </div>
+<!--
+            <aside class="col-sm-4 col-sm-offset-3 aside-box">
+              <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-2L" />
+              <h3>AutoPack-2L</h3>
+              <p>Everything you need to successfully complete exchanger cleaning jobs &mdash; <span style="font-weight:400;">packaged in a convenient, durable travel box.</span><br /><a href="http://www.stoneagetools.com/autopack-pro"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
+            </aside>
+-->
+            
             <aside class="col-sm-3 col-sm-offset-4 aside-box">
-              <h3>Package includes:</h3>
-                <ul class="list-unstyled">
-                  <li>1 x ABX-2L Hose tractor</li>
-                  <li>1 x Hose guide tube assembly</li>
-                  <li>1 x Backout collet</li>
-                  <li>2 x Hose feed stop</li>
-                  <li>1 x Control box</li>
-                </ul>
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
           </section>
 
