--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -67,19 +67,18 @@ master-slider: yes
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Comes standard with mounting options for safe pipe cleaning “out of the box”</li>
-        <li>Accommodates multiple hose sizes</li>
-        <li>Built-in backout preventer and splash guard for operator safety</li>
-        <li>Adjustable forward and reverse feed rates maintain optimal dwell time</li>
-        <li>Multiple mounting options for pipes with or without a flange</li>
-        <li>Lightweight, ergonomic control box operates all features from outside the blast zone</li>
+        <li>Ultra portable system design</li>
+        <li>Interchangeable rollers to accommodate multiple hose sizes</li>
+        <li>Independently adjustable forward and reverse feed rate to customize dwell time</li>
+        <li>Ergonomic control box/li>
+        <li>Multiple mounting kits available for tube, pipe, and drain cleaning</li>
+        <li>Add hose rotation with <a href="/navigator">NAV-170-PKG</a> accessory for cleaning pipes with multiple bends</li>
+        <li>CE Certified</li>
       </ul>
       
-<!--
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a>
       </div>
--->
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
@@ -350,14 +349,12 @@ master-slider: yes
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-<!--
         <div class="insight">
           <img src="/assets/img/quote.png" alt="quote" class="quote" />
-          <p>The Striker worked great clearing hardened plastic polymer from piping equipment and allowed us to go 100% automated.</p>
-          <p class="signed">-James Schafer,<br/>Debusk Services Group</p>
+          <p>When we needed light, versatile, automated equipment for challenging pipe cleaning jobs like elevated areas and pipe rack cleaning, the ABX-PRO fit the bill perfectly.</p>
+          <p class="signed">-Bradley Coble,<br/>PSC Fast Director</p>
         </div>
--->
-        <img src="/assets/img/sliders/prodrive-demo-02.jpg" alt="Striker remote automated shotgun cleaning">
+        <img src="/assets/img/sliders/ABX-PRO_flange2.jpg" alt="ABX-PRO high pressure pipe cleaning">
       </div>
 
       <div class="item">
@@ -368,7 +365,18 @@ master-slider: yes
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="/assets/img/sliders/prodrive-demo-01.jpg" alt="Striker remote automated shotgun cleaning">
+        <img src="/assets/img/sliders/abx-pro_complete_001.jpg" alt="ABX-PRO high pressure pipe cleaning">
+      </div>
+
+      <div class="item">
+<!--
+        <div class="insight">
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
+          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
+          <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
+        </div>
+-->
+        <img src="/assets/img/sliders/prodrive-demo-02.jpg" alt="ABX-PRO high pressure pipe cleaning">
       </div>
 
     </div><!-- End wrapper -->
