--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -57,8 +57,9 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The AutoStroke AST-200 is designed to increase efficiency of AutoBox ABX-2L and ABX-3L in applications with plugged heat exchanger tubes.</p>
-      <p>The AutoStroke senses when a Banshee nozzle has hit a plug and activates an automatic forward and reverse pecking motion that allows the jets to effectively break through obstructions without operator intervention. This produces optimal cleaning and saves wear on your Banshee tools.</p>
+      <p class="product-description">The AutoStroke is designed to increase efficiency and simplify operation of the AutoBox ABX-2L and ABX-3L in applications with plugged tubes.</p>
+      <p>The AutoStroke senses when a Banshee nozzle has hit a blockage and activates an automatic forward and reverse pecking motion that allows the jets to maintain rotation and effectively break through obstructions without operator intervention.</p>
+      <p>This produces optimal cleaning and saves contractors money by reducing wear on your Banshee tools and high pressure flex lances.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
