--- a/waterblast-automation/bundle-blaster.html
+++ b/waterblast-automation/bundle-blaster.html
@@ -53,16 +53,20 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The StoneAge Bundle Blaster is a powerful and affordable automated solution for external or “shell side” cleaning of heat exchangers and tube bundles. This system is ideal for contractors and plants interested in low maintenance, portable and easy to use equipment.</p>
+      <p class="product-description">The Bundle Blaster system offers a powerful and affordable automated solution for external cleaning of heat exchangers and tube bundles. This system is ideal for contractors and plants interested in low maintenance, cost-effective, easy to use equipment. The Bundle Blaster is safer and more effective than traditional hand-held methods of shell side cleaning, and 1/3 of the cost of truck mounted systems.</p>
+      <p>The Bundle Blaster is offered in standard 24 ft (7.3m) and 36 ft (11m) lengths to accommodate the most common bundle sizes. The “A” frames are height adjustable to account for small and large diameters. The entire assembly is modular and can be taken apart for transportation or storage.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Available in standard 24 ft (7.3m) and 36 ft (11m) lengths</li>
-        <li>Adjustable “A” frames with locking caster wheels and anchor hooks</li>
+        <li>Designed for maneuverability on a blast pad and transport between job sites</li>
+        <li>Multiple head options for delivering more concentrated power or covering a wider cleaning path</li>
         <li>Can be adapted to a variety of pressures and flows for highest level of cleaning efficiency</li>
         <li>Match the stroke length to each tube bundle with simple auto-stops for efficient cleaning with no wasted time</li>
         <li>Rotation and traverse speed are independently adjustable using remote control panel</li>
         <li>The entire assembly is modular and can be taken apart with simple hand tools for transportation</li>
+        <li>Adjustable “A” frames with locking wheels and anchor hooks</li>
+        <li>Rollers are available to rotate the tube bundle for complete coverage</li>
+        <li>Easy and cost-effective to maintain</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
