--- a/waterblast-automation/cable-swivel-tool.html
+++ b/waterblast-automation/cable-swivel-tool.html
@@ -63,7 +63,7 @@ master-slider: yes
       <p class="product-description">The patented, hollow-shaft Cable Swivel Tool CST-Air slides on a 3/8 in. (9.5 mm) diameter stretched cable (not supplied) and can be moved by either jet reaction or by a pulling cable. Head rotation is powered by an air motor.</p>
       <p>Extension nipples further adapt the tool to various vessel sizes and improve jet quality by reducing stand-off distance.</p>
       
-      <h2>Features</h2>
+      <h2>Applications</h2>
       <ul class="feature-list">
         <li>Direct fired furnaces, superheaters, and economizer sections</li>
         <li>Cleaning in difficult to reach locations</li>
