--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -61,8 +61,8 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Fin Fan Accessory is designed to adapt the AutoBox family of hose tractors for the specific requirements of cleaning Fin Fan style exchangers.</p>
-      <p>Fin Fan exchangers can be much wider than standard heat exchangers and are often accessed by very narrow walkways. Fin Fan Accessory components allow an AutoBox to be safely positioned in tight walkway spaces for this type of cleaning. Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most all Fin Fan headers and configurations.</p>
+      <p class="product-description">The Fin Fan Accessories are designed to adapt the AutoBox family of flex lance systems for the specific requirements of cleaning Fin Fan style exchangers. The Fin Fan kit is compatible with the ABX-PRO, ABX-2L, and ABX-3L.</p>
+      <p>Fin Fan exchangers can be much wider than standard heat exchangers and are often accessed by very narrow walkways. Fin Fan Accessory components allow the AutoBox and Lightweight Positioner to be safely mounted in tight walkway spaces for this type of cleaning. Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most Fin Fan headers and configurations.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
