--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -63,6 +63,7 @@ master-slider: yes
         <li>Heavy-duty carriage assembly adapts to large diameter lances</li>
         <li>Rugged pipe vice attachment helps stabilize pipe movement</li>
         <li>Automated operation delivers consistent and repeatable results when cleaning thousands of linear feet of pipe</li>
+        <li>Complete package includes adjustable jack stands, control box, rigid lance, and cleaning heads</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
