--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -56,8 +56,10 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
+      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="http://www.stoneagetools.com/autopack-pro" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
       
-      <p class="product-description">The Lightweight Positioner is used in conjunction with AutoBox automated flex lancing systems for controlled, efficient, and safe cleaning of heat exchanger tube IDs. It is specifically designed to be modular, lightweight, easy to setup, and expandable to allow for cleaning of different sized heat exchangers.</p>
+      <p class="product-description">The Lightweight Positioner (LWP) is a utility indexing system that can be paired with a variety of StoneAge automated systems for applications where controlled movement is required. The system is a proven workhorse for controlled, efficient, and safe cleaning of heat exchanger tube IDs. The LWP can also be paired with shotgun tools for tube sheet cleaning and surface preparation.</p>
+      <p>It is specifically designed to be modular, lightweight, easy to setup, and expandable for use on a range of exchanger sizes or configurations.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -118,23 +120,18 @@ master-slider: yes
           </table>
           <p>&#42;<em>Custom rail lengths available</em></p>
         </div>
-<!--
-        <aside class="col-sm-3 col-sm-offset-4 aside-box">
-          <h3>Package includes:</h3>
-            <ul class="list-unstyled">
-              <li>Hose feed tractor</li>
-              <li>Hose stops/backout prevention</li>
-              <li>Strap mount</li>
-              <li>Splash plate</li>
-              <li>Control box</li>
-            </ul>
+        <aside class="col-sm-4 col-sm-offset-3 aside-box">
+          <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-2L" />
+          <h3>AutoPack-LWP</h3>
+          <p>Everything you need to successfully complete exchanger cleaning jobs &mdash; <span style="font-weight:400;">packaged in a convenient, durable travel box.</span><br /><a href="http://www.stoneagetools.com/autopack-pro"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
         </aside>
--->
+<!--
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
           <h3>Need Support?</h3>
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
+-->
       </section>
 
       <!-- Manuals/Docs -->
