--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -52,7 +52,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The StoneAge Outside Diameter Pipe Cleaner is a powerful and affordable automated solution for cleaning the outer surface of drill pipes used in the oil and gas industry. The length of the system can be easily customized for permanent installation into pipe cleaning facilities providing consistent and efficient removal of drill mud, concrete, slag or other exterior deposits on large volumes of pipe.</p>
+      <p class="product-description">The StoneAge O.D. Pipe Cleaner is a powerful and affordable automated solution for cleaning the outer surface of drill pipes used in the oil and gas industry. The length of the system can be easily customized for permanent installation into pipe cleaning facilities providing consistent and efficient removal of drill mud, concrete, slag, or other exterior deposits on large volumes of pipe.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
