--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -61,15 +61,22 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">StoneAge Rigid Lance Machines are the industry standard for both horizontal and vertical rigid lance cleaning of heat exchangers. These systems provide more forward jet power than flex-lancing and increase safety by removing the operator from the splash-back area.</p>
+      <p class="product-description">StoneAge Rigid Lance Machines are the industry standard for both horizontal and vertical rigid lance cleaning of heat exchangers. These systems operate up to three rotary lances and provide more forward jet power than flex-lancing to clean difficult deposits. Fully remote operation increases safety by removing the operator from the splash-back area.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Adapts to any size bundle and can be configured to horizontal or vertical operations to maximize flexibility</li>
-        <li>Operator is removed up to 25 ft (7.6m) away from the splashback area for increased safety</li>
+        <li>Triple, dual, or single lance operation</li>
+        <li>Adapts to any size bundle and can be configured for horizontal or vertical operations to maximize flexibility</li>
+        <li>Operator is removed up to 25 ft (7.6m) away from the splash back area for increased safety</li>
         <li>Dual coil springs increase safety and stability of guide block</li>
         <li>Swivel wheels, jack stands, and rear supports provide extra stability and support in key points of the system</li>
         <li>Air or hydraulic powered</li>
+      </ul>
+      <h2>Applicaions</h2>
+      <ul class="feature-list">
+        <li>Clearing and unplugging vertical and horizontal bundles</li>
+        <li>Cleaning and polishing evaporator tubes</li>
+        <li>Removing thin, hard scale, carbons, coke, and polymers</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
