--- a/waterblast-automation/striker-remote-shotgunning.html
+++ b/waterblast-automation/striker-remote-shotgunning.html
@@ -102,7 +102,7 @@ master-slider: yes
         <li><a href="#section-bar-1"><span>Specifications</span></a></li>
         <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
         <li><a href="#section-bar-3"><span>Videos</span></a></li>
-<!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
+        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
       </ul>
     </nav>
     <div class="content-wrap">
@@ -248,7 +248,7 @@ master-slider: yes
         </div>
       </section> 
 
-      <!-- Kits 
+      <!-- Kits -->
       <section id="section-bar-4">
         <div class="col-sm-8">
           <h3>The following kits are available:</h3>
@@ -258,16 +258,15 @@ master-slider: yes
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
                   <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    <strong>ABX-500 EPP</strong> AutoBox ABX-500 Extra Parts Package<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                    <strong>CB 615</strong> Replacement O-Ring Kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                   </a>
                 </h4>
               </div>
               <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                   <ul>
-                    <li>Drive roller assembly</li>
-                    <li>Anti-seize</li>
-                    <li>Square-end key</li>
+                    <li>1 x <strong>BJ 016</strong> O-Ring</li>
+                    <li>1 x <strong>TR 127</strong> O-Ring</li>
                   </ul>
                 </div>
               </div>
@@ -280,7 +279,6 @@ master-slider: yes
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
       </section>
--->
 
     </div><!-- /content -->
   </div><!-- /tabs -->
