--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -53,7 +53,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of delivering flows up to 220 gpm (830 l/min) with minimal pressure loss. Applying higher flows allows contractors to remove thicker deposits and deliver longer and harder hitting jets from further distances. This is ideal for cleaning large tanks, removing coke deposits, and other hard to handle applications and materials.</p>
+      <p class="product-description">The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of delivering flows up to 220 gpm (830 l/min) with minimal pressure loss. Applying higher flows allows contractors to remove thicker deposits and deliver longer and harder hitting jets from further distances. This is ideal for cleaning hard to handle applications such as large tanks and difficult materials such as coke deposits.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
