--- a/waterblast-automation/yellow-jacket-boiler-cleaner.html
+++ b/waterblast-automation/yellow-jacket-boiler-cleaner.html
@@ -80,6 +80,9 @@ master-slider: yes
         <li>Lower frame has integral wheels and can be moved similar to a furniture dolly</li>
         <li>Remote operation from corded pendant station </li>
         <li>All functions utilize low voltage electrical power for precise positioning</li>
+        <li>24V DC linear actuators for up/down and left/right positioning</li>
+        <li>24V DC winch extends lance into the boiler</li>
+        <li>Requires 120 VAC 20A power supply</li>
         <li>Remote dump control available</li>
       </ul>
 
