--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -477,7 +477,7 @@ landing: yes
           </a>
         </div>
         
-        <div class="mix surface-prep" data-name="floor-cleaner" data-designation="automated">
+        <div class="mix surface-prep hydro-demo" data-name="floor-cleaner" data-designation="automated">
           <a href="/floor-cleaner" class="search-text">
             <img src="/assets/img/product/fcsv-01.jpg" class="img-responsive" />
             <h3>Floor Cleaner</h3>
