--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -57,7 +57,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">Barracuda self-rotary tools are the industry standard for speed controlled rotary shotgunning. These lightweight tools adapt to any high pressure pump and are excellent for difficult and irregular surfaces where an operator using a hand-held tool can more efficiently maneuver. Being so versatile and easy to maintain, Barracuda tools are also used on automated pad blaster excavators and other hands-free applications.</p>
+      <p class="product-description">Barracuda self-rotary tools are the industry standard for speed controlled rotary shotgunning. These lightweight tools adapt to any high pressure pump and are excellent for difficult and irregular surfaces where an operator using a hand-held tool can more efficiently maneuver. Being so versatile and easy to maintain, Barracuda tools are also used on automated and hands-free equipment.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -66,6 +66,7 @@ master-slider: yes
         <li>Light weight eases fatigue and keeps operators working with less stress</li>
         <li>Field maintainable, easily rebuilt in most shops with low- cost standard fluid and parts</li>
         <li>Four-port heads can easily be configured for two-port applications</li>
+        <li>Fully redesigned BC 705 cartridge seal for 44k psi models effectively doubles the life of the seal and is a drop-in replacement to the BC 505-S</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
