--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -61,15 +61,19 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The AutoBox ABX-500 is a hands free hose drive for pipe and vessel cleaning. The system accommodates a wide range of hose sizes and passes couplings up to 1.75 in. (45 mm) OD.</p>
-      <p>You can connect any StoneAge rotary cleaning tool to the hose to suit your application. The ABX-500 controls the forward and reverse speed of the rotary tool for consistent feed rate and dwell time.</p>
+      <p class="product-description">The AutoBox ABX-500 is a hands-free hose tractor for pipe and vessel cleaning. This utility hose feeding system can be adapted for a wide range of applications to enable precision hose control and increased safety. The ABX-500 accommodates a wide range of hose sizes and passes couplings up to 1.75 in. (45 mm) OD.</p>
+      <p>You can connect any StoneAge rotary cleaning nozzle or 3D tool to the hose to suit your application. The ABX-500 controls the forward and reverse speed of the rotary tool for consistent feed rate and dwell time.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>1/3 the cost of rotary hose devices</li>
-        <li>Simple operation with minimal maintenance requirements &ndash; occasional drive roller replacement is a 3-minute swap in the field</li>
-        <li>Capable of exerting up to 200 ft-lb of push/pull force on the hose when outfitted with snout accessory</li>
-        <li>All parts are stocked and ready to ship same day to minimize work interruption</li>
+        <li>Remote operation from outside of the blast zone reduces risk of injuri</li>
+        <li>Hands-free cleaning minimizes operator fatigue and reduces downtime</li>
+        <li>Remotely adjustable hose clamp pressure allows operator to adapt to changing conditions and minimize hose wear</li>
+        <li>Forward and reverse feed rates can be independently adjusted for repeatable, consistent cleaning</li>
+        <li>Capable of exerting up to 200 ft-lb of push/pull force on the hose when outfitted with</li>
+        <li>Passes hoses and couplings up to 1.75 in. (44.5 mm) OD</li>
+        <li>Several mounting options available</li>
+        <li>CE Certified</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
