--- a/waterblast-automation/bfw-100-boiler-cleaner.html
+++ b/waterblast-automation/bfw-100-boiler-cleaner.html
@@ -56,8 +56,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">Designed for online boiler cleaning, contractors can reduce down time by cleaning at high temperatures. With a 300 gpm (1140 l/min) flow capability, the BFW-100 can effectively clean any large vessel with limited entry access.
-      </p>
+      <p class="product-description">The BFW-100 is an automated system designed for hands-free online boiler cleaning that enables contractors to reduce down time by cleaning at high temperatures. With a 300 gpm (1140 l/min) flow capability, the BFW-100 can effectively clean any large vessel with limited entry access.</p>
       <p>The BFW-100 features an adjustable cart with an air-powered boom positioner and provides excellent cleaning for pulp plant boilers, refinery and chemical plant vessels, as well as furnace radiant sections.</p>
       
       <h2>Features</h2>
@@ -66,6 +65,10 @@ master-slider: yes
         <li>Remote Control Box controls linear and rotation speeds from a safe distance</li>
         <li>Adjustable rail and cart allows for easy tool positioning, including elevation and angle of the lance</li>
         <li>Cantilever option available accommodates lengths up to 24 ft (7.3 m)</li>
+      </ul>
+      <h2>Applications</h2>
+      <ul class="feature-list">
+        <li>Pulp plant boilers, refinery and chemical plant vessels, furnace radiant sections, boiler floors</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
