--- a/waterblast-automation/scs-tank-cleaner.html
+++ b/waterblast-automation/scs-tank-cleaner.html
@@ -65,6 +65,7 @@ master-slider: yes
 
       <p class="product-description">The StoneAge SCS High Flow Tank Cleaner has been engineered to deliver high flow and controlled rotation for optimal cleaning of medium to large tanks and vessels. </p>
       <p>The SCS has a unique adjustable, speed controlled swivel that allows the operator to regulate rotation speed between 4 and 60 rpm while delivering up to 300 gpm (1136 lpm). This combination of high flow and slow rotation is ideal for removing difficult materials such as coke or refractory.</p>
+      <p>The SCS High Flow Tank Cleaner can be customized with several head options to adapt for large pipe cleaning, tunnel cleaning or stack cleaning. We also offer newly designed high flow nozzles with unique flow straighteners to increase the precision and power of the jets.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
