--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -10,6 +10,21 @@
 </div>
 
 <!-- WB -->
+<div id="ap-surface-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/744vqymekLg?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="ap-drain-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/tyD_ly0OG50?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="ap-pipe-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/epskd5oNi3I?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="ap-tube-1-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/PznlreyFSWY?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="ap-tube-2-3-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/rJkYoPp5jmc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="hcs-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/jvWa45TniS0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
