--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -56,7 +56,7 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="http://www.stoneagetools.com/autopack-pro" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
+      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-lwp" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
       
       <p class="product-description">The Lightweight Positioner (LWP) is a utility indexing system that can be paired with a variety of StoneAge automated systems for applications where controlled movement is required. The system is a proven workhorse for controlled, efficient, and safe cleaning of heat exchanger tube IDs. The LWP can also be paired with shotgun tools for tube sheet cleaning and surface preparation.</p>
       <p>It is specifically designed to be modular, lightweight, easy to setup, and expandable for use on a range of exchanger sizes or configurations.</p>
@@ -123,7 +123,7 @@ master-slider: yes
         <aside class="col-sm-4 col-sm-offset-3 aside-box">
           <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-2L" />
           <h3>AutoPack-LWP</h3>
-          <p>Everything you need to successfully complete exchanger cleaning jobs &mdash; <span style="font-weight:400;">packaged in a convenient, durable travel box.</span><br /><a href="http://www.stoneagetools.com/autopack-pro"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
+          <p>Everything you need to successfully complete exchanger cleaning jobs &mdash; <span style="font-weight:400;">organized in a durable job box.</span><br /><a href="/autopack-lwp"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
         </aside>
 <!--
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
@@ -149,6 +149,7 @@ master-slider: yes
             <li><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-3L Data Sheet</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-2L Tool Talk</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-3L Tool Talk</a></li>
+            <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Data Sheet</a></li>
           </ul>
             <p>The Lightweight Positioner is an accessory product for the AutoBox family of hose tractors. Usage details can be found in documentation for AutoBox products.</p>
         </div>
