--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -64,7 +64,7 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-<!--      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="http://www.stoneagetools.com/autopack-pro" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>-->
+      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-2l" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
 
       <p class="product-description">The StoneAge AutoBox ABX-2L is an automated two lance system for hands-free heat exchanger tube cleaning applications. It was designed to reliably control one or two flex lances with an emphasis on portability, ease of setup, and safety.</p>
       <p>The ABX-2L can be used with any pressure rated hose ranging in size from 3/2 to 8/4. Paired with StoneAge Banshee rotary tube cleaning nozzles and Lightweight Positioner, the ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
@@ -153,19 +153,19 @@ master-slider: yes
               </tbody>
               </table>
             </div>
-<!--
             <aside class="col-sm-4 col-sm-offset-3 aside-box">
               <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-2L" />
               <h3>AutoPack-2L</h3>
-              <p>Everything you need to successfully complete exchanger cleaning jobs &mdash; <span style="font-weight:400;">packaged in a convenient, durable travel box.</span><br /><a href="http://www.stoneagetools.com/autopack-pro"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
+              <p>Everything you need to successfully complete exchanger cleaning jobs &mdash; <span style="font-weight:400;">organized in a durable job box.</span><br /><a href="/autopack-2l"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
             </aside>
--->
             
+<!--
             <aside class="col-sm-3 col-sm-offset-4 aside-box">
               <h3>Need Support?</h3>
               <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
+-->
           </section>
 
           <!-- Manuals/Docs -->
@@ -174,7 +174,7 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
 <!--                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> <em class="grey">- Current 8mm version</em></li>-->
-                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual_closed_guide_assembly.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> 
+                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> 
 <!--                  <em class="grey">- Closed guide tube assembly</em></li>-->
                 <li><a href="/assets/pdf/manuals/ABX-2L_Upgrade_Guide.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L Upgrade Guide (6mm to 8mm)</a></li>
                 <li><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;CB-ABX Control Box User Manual</a></li>
@@ -186,6 +186,7 @@ master-slider: yes
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Data Sheet</a></li>
                 <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Tool Talk</a></li>
+                <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Data Sheet</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -217,6 +218,16 @@ master-slider: yes
                 </div>
                 <!-- End Lightbox call -->
                 <p class="caption">ABX-2L Training</p>
+              </div>
+              <div class="col-sm-4 col-centered">
+                <!-- Lightbox call -->
+                <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #ap-tube-2-3-vid">
+                    <img src="/assets/vid/thumb/autopack-exchanger-2-3-vid.jpg" alt="AutoPack Overview video" class="img-responsive" />
+                  </a>
+                </div>
+                <!-- End Lightbox call -->
+                <p class="caption">AutoPack Exchanger Cleaning Kits</p>
               </div>
             </div>
           </section>
