--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -60,7 +60,7 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="http://www.stoneagetools.com/autopack-pro" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
+      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-pro-web" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
       
       <p class="product-description">The AutoBox ABX-PRO is a hose feed tractor engineered with safety, portability and quick set-up in mind. This versatile device is designed with multiple mounting options and accessories to adapt it for a wide variety of pipe, drain and tube cleaning applications.</p>
       <p class="product-description">The ABX-PRO is the perfect tool for limited access applications and includes a lightweight control box for increased safety and mobility.</p>
@@ -144,7 +144,7 @@ master-slider: yes
         <aside class="col-sm-4 col-sm-offset-3 aside-box">
           <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-PRO" />
           <h3>AutoPack-PRO</h3>
-          <p>Everything you need to successfully complete <span style="font-weight:400;">pipe, drain, or exchanger cleaning</span> packaged in a convenient, durable travel box.<br /><a href="http://www.stoneagetools.com/autopack-pro"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
+          <p>Everything you need to successfully complete pipe, drain, or exchanger tube cleaning <span style="font-weight:400;">packaged in an organized, durable job box.</span><br /><a href="/autopack-pro-web"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
         </aside>
       </section>
 
@@ -162,6 +162,7 @@ master-slider: yes
             <h3>Documentation</h3>
             <li><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Data Sheet</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Tool Talk</a></li>
+            <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Data Sheet</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
